--- a/westmeadmc/src/app/left-pane/left-pane.component.html
+++ b/westmeadmc/src/app/left-pane/left-pane.component.html
@@ -1,5 +1,6 @@
+<h2>Our Services</h2>
 <div>
-    <h1>Our Services</h1>
+    <div>
     <ul>
         <li>Women’s &amp; Men’s Health</li>
         <li>Infant &amp; Children’s Health</li>
@@ -14,4 +15,5 @@
         <li>Pathology</li>
         <li>Specialist Services</li>
     </ul>
+    </div>
 </div>
