--- a/westmeadmc/src/app/right-pane/right-pane.component.html
+++ b/westmeadmc/src/app/right-pane/right-pane.component.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
     <h2>OUR MOTTO</h2>
     <h4>Your health is in our heart.</h4>
 
@@ -14,4 +14,9 @@
     <b>OUR LOCATION : </b><span>Shop 6 Coles Westmead 29-33 Darcy Road Westmead 2145</span><br>
     <b>CONTACT US : </b><span>Ph: (02) 9687 4000</span><br>
     <b>PARKING : </b><span>FREE 2 Hours of Secure Parking</span>
+</div> -->
+
+<div class="contactDiv">
+    <object type="text/html" data="https://www.westmeaddoctors.com.au/our-gps/" width="102%" height="725px">
+    </object>
 </div>
