--- a/westmeadmc/src/app/about-us/about-us.component.html
+++ b/westmeadmc/src/app/about-us/about-us.component.html
@@ -1,1 +1,4 @@
-<p>about-us works!</p>
+<div class="about-us"> 
+    <object type="text/html" data="https://westmeadmedical.com.au/about-us/" width="100%" height="725px">
+    </object>
+ </div> 
