--- a/westmeadmc/src/app/admin-approval/admin-approval.component.html
+++ b/westmeadmc/src/app/admin-approval/admin-approval.component.html
@@ -43,12 +43,19 @@
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef> Approve/Reject </th>
                     <td mat-cell *matCellDef="let element"> 
-                        <button mat-mini-fab color="primary" class="approveButton" (click)="onApprove(element, 'doctor')">
-                            <mat-icon>check</mat-icon>
-                        </button> 
-                        <button mat-mini-fab color="primary" class="rejectButton" (click)="onReject(element, 'doctor')">
-                            <mat-icon>close</mat-icon>
+                        <button mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="">
+                            <mat-icon class="icon">more_vert</mat-icon>
                         </button>
+                        <mat-menu #appMenu="matMenu" yPosition="above">
+                            <button mat-menu-item (click)="onApprove(element, 'doctor')">
+                                <mat-icon style="color: #3f51b5 !important">check</mat-icon>
+                                Approve
+                            </button>
+                            <button mat-menu-item (click)="onReject(element, 'doctor')" >
+                                <mat-icon style="color: #3f51b5 !important">close</mat-icon>
+                                Reject
+                            </button>
+                        </mat-menu> 
                     </td>
                 </ng-container>
 
@@ -85,13 +92,20 @@
                 <!-- Get Details -->
                 <ng-container matColumnDef="action">
                     <th mat-header-cell *matHeaderCellDef> Approve/Reject </th>
-                    <td mat-cell *matCellDef="let element"> 
-                        <button mat-mini-fab color="primary" class="approveButton" (click)="onApprove(element,'admin')">
-                            <mat-icon>check</mat-icon>
-                        </button> 
-                        <button mat-mini-fab color="primary" class="rejectButton" (click)="onReject(element, 'admin')">
-                            <mat-icon>close</mat-icon>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="">
+                            <mat-icon class="icon">more_vert</mat-icon>
                         </button>
+                        <mat-menu #appMenu="matMenu" yPosition="above">
+                            <button mat-menu-item (click)="onApprove(element,'admin')">
+                                <mat-icon style="color: #3f51b5 !important">check</mat-icon>
+                                Approve
+                            </button>
+                            <button mat-menu-item (click)="onReject(element, 'admin')" >
+                                <mat-icon style="color: #3f51b5 !important">close</mat-icon>
+                                Reject
+                            </button>
+                        </mat-menu> 
                     </td>
                 </ng-container>
 
