--- a/westmeadmc/src/app/appointment/appointment.component.html
+++ b/westmeadmc/src/app/appointment/appointment.component.html
@@ -167,7 +167,10 @@
     </mat-tab>
     <mat-tab label="Appointment History">
         <div class="tabContent">
-            
+            <mat-form-field appearance="fill" color="primary" *ngIf="isAdmin">
+                <mat-label>Patient Email Address</mat-label>
+                <input matInput [(ngModel)]="patientId" (blur)="loadAppointmentHistory();">
+            </mat-form-field>
             <mat-form-field>
                 <mat-label>Filter</mat-label>
                 <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Doctor Name" #input>
@@ -178,24 +181,33 @@
                     <td mat-cell *matCellDef="let element"> {{appointments.filteredData.indexOf(element) + 1}} </td>
                   </ng-container>
                   
-                <ng-container matColumnDef="dateTime">
-                    <th mat-header-cell *matHeaderCellDef> Date & Time </th>
-                    <td mat-cell *matCellDef="let element"> {{element.dateTime}} </td>
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef> Date</th>
+                    <td mat-cell *matCellDef="let element"> {{getReadableDate(element.appointmentTime)}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="time">
+                    <th mat-header-cell *matHeaderCellDef> Time</th>
+                    <td mat-cell *matCellDef="let element"> {{getReadableTime(element.appointmentTime)}} </td>
                 </ng-container>
         
                 <ng-container matColumnDef="doctorName">
                     <th mat-header-cell *matHeaderCellDef> Doctor Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.doctor.lastName }} {{element.doctor.firstName}} </td>
                 </ng-container>
         
-                <ng-container matColumnDef="status">
-                    <th mat-header-cell *matHeaderCellDef> Comments </th>
-                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                <ng-container matColumnDef="reason">
+                    <th mat-header-cell *matHeaderCellDef> Reason for visit</th>
+                    <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
                 </ng-container>
         
-                <ng-container matColumnDef="billDetails">
-                    <th mat-header-cell *matHeaderCellDef> Document Link </th>
-                    <td mat-cell *matCellDef="let element"> <a [href]="element.billDetails">Scan Report</a> </td>
+                <ng-container matColumnDef="action">
+                    <th mat-header-cell *matHeaderCellDef> Cancel </th>
+                    <td mat-cell *matCellDef="let element"> 
+                        <button mat-mini-fab color="primary" *ngIf="isCancelAvailable(getReadableDate(element.appointmentTime))" (click) = "onCancelAppointment(element)">
+                            <mat-icon>close</mat-icon>
+                        </button>
+                    </td>
                 </ng-container>
         
                 <tr mat-header-row *matHeaderRowDef="appointmentHistoryColumns"></tr>
