--- a/westmeadmc/src/app/center-pane/center-pane.component.css
+++ b/westmeadmc/src/app/center-pane/center-pane.component.css
@@ -1,11 +1,13 @@
 #appointment{
-    background-color: #3f51b5;
-    color: white;
     text-align: center;
     height: 39vh;
 }
 
 button{
-    background-color: black;
+    background-color: #00adee;
     color: white;
+}
+
+.home-description{
+    padding-top: 2%;
 }
