--- a/westmeadmc/src/app/doctor-availability/doctor-availability.component.css
+++ b/westmeadmc/src/app/doctor-availability/doctor-availability.component.css
@@ -3,16 +3,18 @@
     width: 100%;
 }
 
-.doctorAvailabilityDiv h2{
-    text-align: center;
+h2 {
+    background-color: #f7f7f7 !important;
+    text-align: left;
+    padding-left: 2%;
 }
 
-.row {
+.availabilityRow {
     width: 100%;
     text-align: center;
 }
 
-.row mat-form-field{
+.availabilityRow mat-form-field{
     padding-left: 5%;
 }
 
