--- a/westmeadmc/src/app/left-pane/left-pane.component.css
+++ b/westmeadmc/src/app/left-pane/left-pane.component.css
@@ -1,10 +1,12 @@
-h1 {
-    text-align: center;
-    color: #3f51b5;
+h2 {
+    background-color: #f7f7f7 !important;
+    text-align: left;
+    padding-left: 2%;
 }
 
 ul li {
-    list-style-image: url(../../images/listIcon.png);
+    list-style-image: url(../../assets/images/listIcon.png);
     padding: 6px 0 !important;
 }
+
 
