--- a/westmeadmc/src/app/menu/menu.component.css
+++ b/westmeadmc/src/app/menu/menu.component.css
@@ -15,3 +15,16 @@ button {
     width: 66px;
     float: left;
 }
+
+.user {
+    color: white !important;
+}
+
+.headerMenu {
+    background-color: #3f51b5 !important;
+}
+
+ul {
+    justify-content: center;
+    display: flex;
+  }
