--- a/westmeadmc/src/app/admin-approval/admin-approval.component.css
+++ b/westmeadmc/src/app/admin-approval/admin-approval.component.css
@@ -21,6 +21,8 @@ h1 {
 .approvalDiv {
     display: inline-block;
     width: 100%;
+    height: 90vh;
+    margin-top: 10vh !important;
 }
 .mat-select-value {
     color: black !important;
