--- a/westmeadmc/src/app/app.component.css
+++ b/westmeadmc/src/app/app.component.css
@@ -25,6 +25,7 @@
     background-color: #00adee;
     height: 40%;
     width: 100%;
+    margin-top: 10vh;
 }
 
 .footer-column-one, .footer-column-two, .footer-column-three{
