--- a/westmeadmc/src/app/left-pane/left-pane.component.html
+++ b/westmeadmc/src/app/left-pane/left-pane.component.html
@@ -1,19 +1,4 @@
-<h2>Our Services</h2>
-<div>
-    <div>
-    <ul>
-        <li>Women’s &amp; Men’s Health</li>
-        <li>Infant &amp; Children’s Health</li>
-        <li>Newborn Circumcision</li>
-        <li>Skin Cancer</li>
-        <li>Minor Procedures</li>
-        <li>Mental health</li>
-        <li>Travel Medicine</li>
-        <li>Health screening</li>
-        <li>Diabetes &amp; Chronic Disease Management</li>
-        <li>Work injuries &amp; Work cover</li>
-        <li>Pathology</li>
-        <li>Specialist Services</li>
-    </ul>
-    </div>
+<div class="our-practice">
+        <object type="text/html" data="https://www.westmeaddoctors.com.au/gp-and-allied-health/" width="102%" height="1500px">
+        </object>
 </div>
