--- a/westmeadmc/src/app/menu/menu.component.html
+++ b/westmeadmc/src/app/menu/menu.component.html
@@ -67,7 +67,7 @@
     </button>
 </mat-menu>
 <button mat-button routerLink="/left-pane">
-  Services
+  Our Practice
 </button>
 <button mat-button routerLink="/right-pane">
   Contact us
@@ -75,9 +75,9 @@
 <button mat-button routerLink="/our-staff">
   Our Doctors
 </button>
-<button mat-button routerLink="/about-us">
+<!--<button mat-button routerLink="/about-us">
     About us
-</button>
+</button> -->
 <button mat-button routerLink="/health-tips">
     Health Tips
 </button>
