--- a/westmeadmc/src/app/right-pane/right-pane.component.html
+++ b/westmeadmc/src/app/right-pane/right-pane.component.html
@@ -17,6 +17,6 @@
 </div> -->
 
 <div class="contactDiv">
-    <object type="text/html" data="https://www.westmeaddoctors.com.au/our-gps/" width="102%" height="725px">
+    <object type="text/html" data="https://www.westmeaddoctors.com.au/location-contact/" width="102%" height="725px">
     </object>
 </div>
