--- a/westmeadmc/src/app/doctor-availability/doctor-availability.component.css
+++ b/westmeadmc/src/app/doctor-availability/doctor-availability.component.css
@@ -1,12 +1,14 @@
 .doctorAvailabilityDiv{
     display: inline-block;
     width: 100%;
+    height: 90vh;
 }
 
 h2 {
     background-color: #f7f7f7 !important;
     text-align: left;
     padding-left: 2%;
+    margin-top: 10vh !important;
 }
 
 .availabilityRow {
