--- a/westmeadmc/src/app/left-pane/left-pane.component.css
+++ b/westmeadmc/src/app/left-pane/left-pane.component.css
@@ -1,12 +1,3 @@
-h2 {
-    background-color: #f7f7f7 !important;
-    text-align: left;
-    padding-left: 2%;
+.our-practice{
+    margin-top:-20vh;
 }
-
-ul li {
-    list-style-image: url(../../assets/images/listIcon.png);
-    padding: 6px 0 !important;
-}
-
-
