--- a/westmeadmc/src/app/manage-account/manage-account.component.css
+++ b/westmeadmc/src/app/manage-account/manage-account.component.css
@@ -2,11 +2,13 @@
     display: inline-block;
     width: 100%;
     text-align: center;
+    height: 80vh;
 }
 h2 {
     background-color: #f7f7f7 !important;
     text-align: left;
     padding-left: 2%;
+    margin-top: 10vh !important;
 }
 
 .ma-row {
