--- a/westmeadmc/src/app/our-doctors/our-doctors.component.html
+++ b/westmeadmc/src/app/our-doctors/our-doctors.component.html
@@ -1,4 +1,4 @@
 <div class="our-doctors">
-    <object type="text/html" data="https://www.westmeaddoctors.com.au/our-specialists/" width="102%" height="1500px">
+    <object type="text/html" data="https://www.westmeaddoctors.com.au/our-gps/" width="102%" height="1500px">
     </object>
 </div>
